--- a/index.html
+++ b/index.html
@@ -89,14 +89,14 @@
             
             <div class="about-container">
                 <div class="left-about">
-                    <p>I am deeply passionate about coding and data exploration, driven by a curious mindset that fuels my continuous quest for knowledge.</p>
-                    <div id="additional-info">
-                        I am deeply passionate about coding and data exploration, driven by a curious mindset that fuels my continuous quest for knowledge. With experiences spanning academia and government sectors, I bring a high level of professionalism to every endeavor I undertake. Whether delving into complex coding challenges or navigating intricate data landscapes, I approach each task with diligence and dedication.
+                    I am deeply passionate about coding and data exploration, driven by a curious mindset that fuels my continuous quest for knowledge.
+                    <div id="additional-info"><br>
+                       With experiences spanning academia and government sectors, I bring a high level of professionalism to every endeavor I undertake. Whether delving into complex coding challenges or navigating intricate data landscapes, I approach each task with diligence and dedication.
                         <br><br>
                         My expertise encompasses a wide array of skills, ranging from project monitoring and evaluation to in-depth research and analysis. Renowned for my meticulous attention to detail, I thrive in collaborative environments, fostering strong relationships and delivering comprehensive reports and research findings. My overarching goal is to contribute to organizational success while nurturing enduring partnerships built on trust and mutual respect.
                         <br><br>
                         Currently, I am immersed in refining my data analysis capabilities, driven by a desire to leverage data and information effectively in addressing critical societal issues. Through ongoing learning and skill development, I am committed to honing my abilities in analyzing data to uncover valuable insights and solutions that make a meaningful difference in the world.
-                    </div>
+                    </div><br>
                     <button class="read-more-btn" onclick="toggleReadMore()"><span class="theme-color skills"><b>Read more</b></span></button>
                 </div>
             </div>
